# Production-Grade-LLM-Evaluation-Framework-with-Multi-Metric-Analysis

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: evaluation.yml
benchmarks/: rag_benchmark.jsonl
examples/: config.yaml  model_outputs_gpt4.jsonl  model_outputs_llama.jsonl
src/llm_eval/: __init__.py  cli.py  config.py  dataset.py  pipeline.py
src/llm_eval/judges/: __init__.py  anthropic_judge.py  base.py  groq_judge.py  openai_judge.py
src/llm_eval/metrics/: __init__.py  answer_relevancy.py  base.py  bertscore.py  bleu.py  context_relevancy.py  faithfulness.py  rouge.py
src/llm_eval/reporting/: __init__.py  json_reporter.py  markdown_reporter.py  visualizer.py
src/llm_eval/utils/: __init__.py  logging.py  retry.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_bertscore.py  test_bleu.py  test_cli.py  test_config.py  test_dataset.py  test_judges.py  test_rag_metrics.py  test_reporting.py  test_rouge.py
